--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -1,11 +1,12 @@
 filebeat.inputs:
-
 - type: log
-  paths:
-    - /usr/share/filebeat/logs/*.log
-
+  paths: /usr/share/filebeat/logs/*.log
+  json.keys_under_root: true
+  json.overwrite_keys: true
+  json.add_error_key: true
+  json.expand_keys: true
 
 output.logstash:
   enabled: true
   hosts: ["logstash:5044"]
-  #index: "elk-spike-%{+YYYY.MM.dd}"
+  #index: "elk-spike-%{+YYYY.MM.dd}" 
